--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,25 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!--
-Design by Free CSS Templates
-http://www.freecsstemplates.org
-Released for free under a Creative Commons Attribution 3.0 License
-
-Name       : Lettering  
-Description: A two-column, fixed-width design with dark color scheme.
-Version    : 1.0
-Released   : 20120513
-
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title><%= @item[:title] %></title>
-<meta name="generator" content="nanoc <%= Nanoc::VERSION %>"> 
-<link href="http://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" type="text/css" />
-<link href="/style.css" rel="stylesheet" type="text/css" media="screen" />
-</head>
+<%= render('_header') %>
 <body>
 <div id="wrapper">
   <div id="page">
@@ -49,9 +28,7 @@ Released   : 20120513
   </div>
   <!-- end #page -->
 </div>
-<div id="footer">
-  <p>&copy; Sitename.com. Design by <a href="http://www.freecsstemplates.org">FCT</a>. Background by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
-</div>
-<!-- end #footer -->
+
+<%= render('_footer') %>
 </body>
 </html>
