--- a/layouts/_header.html
+++ b/layouts/_header.html
@@ -19,4 +19,5 @@ Released   : 20120513
 <meta name="generator" content="nanoc <%= Nanoc::VERSION %>"> 
 <link href="http://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" type="text/css" />
 <link href="/style.css" rel="stylesheet" type="text/css" media="screen" />
+<link rel="alternate" type="application/atom+xml" title="Atom" href="/feed.xml" /> 
 </head>
