--- a/layouts/news_archives.html
+++ b/layouts/news_archives.html
@@ -5,14 +5,8 @@
     <div id="page-bgtop">
       <div id="page-bgbtm">
         <div id="content">
-
-              <%= yield %>
-
-          <p>Pages (<%= @item[:title] %>): 
-            <% @item[:max_page_number].to_i.times do |i| %>
-              [<a href='/news_archives/<%= i + 1 %>/'><%= i + 1 %></a>]　
-            <% end %>
-          </p>
+          <p>Pages :<%= pagination_bar %></p>
+          <%= yield %>
 
           <div style="clear: both;">&nbsp;</div>
 
