Add attention for Wiki

--- a/layouts/_side.html
+++ b/layouts/_side.html
@@ -9,7 +9,7 @@
 
   <ul>
     <li><a href="https://groups.google.com/d/forum/japan-nanoc-users-group">Japan nanoc Users&#039;Group</a><br />コミュニケーションのためにGoogleグループを利用しています。</li>
-    <li><a href="https://github.com/Japan-nanoc-Users-Group/ja-nanoc-site/wiki">Wiki</a><br />GitHubのWikiに使い方などの技術的なコンテンツを作成しています。</li>
+    <li><a href="https://github.com/Japan-nanoc-Users-Group/ja-nanoc-site/wiki">Wiki</a><br />Tips等は現在準備中です。暫定的にGitHubのWikiに使い方などの技術的なコンテンツを作成しています。</li>
     <li><a href="/feed.xml">Feed</a><br />RSSリーダー等で更新の確認が出来ます。</li>
     <li><a href="/news_archives/1/">過去記事</a><br />本サイトは、情報源へのHUBとしての役割の他はお知らせの配信がメインのため、過去記事のユーザビリティについては配慮しておりません。</li>
   </ul>
