Add news and edit color for a tag

--- a/layouts/news_archives.html
+++ b/layouts/news_archives.html
@@ -5,6 +5,7 @@
     <div id="page-bgtop">
       <div id="page-bgbtm">
         <div id="content">
+          <p><%= @item[:title] %></p>
           <p>Pages :<%= pagination_bar %></p>
           <%= yield %>
 
