design is changed

--- a/layouts/_footer.html
+++ b/layouts/_footer.html
@@ -1,4 +1,5 @@
-<div id="footer">
-  <p>&copy; Sitename.com. Design by <a href="http://www.freecsstemplates.org">FCT</a>. Background by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
-</div>
+<footer class="well">
+<p>generator:<a href="http://nanoc.ws/">nanoc</a></p>
+<p>theme:<a href="http://wakamsha.github.io/greenmind/">GrennMind(based on twitter bootstrap)</a></p>
+</footer>
 <!-- end #footer -->
