--- a/layouts/_header.html
+++ b/layouts/_header.html
@@ -1,23 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!--
-Design by Free CSS Templates
-http://www.freecsstemplates.org
-Released for free under a Creative Commons Attribution 3.0 License
-
-Name       : Lettering  
-Description: A two-column, fixed-width design with dark color scheme.
-Version    : 1.0
-Released   : 20120513
-
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html>
 <head>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta charset="UTF-8">
 <title><%= @item[:title] %></title>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="format-detection" content="telephone=no">
+<meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=0.5,user-scalable=yes,initial-scale=1.0">
+<meta name="keywords" content="">
+<meta name="description" content="">
 <meta name="generator" content="nanoc <%= Nanoc::VERSION %>"> 
-<link href="http://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" type="text/css" />
-<link href="/style.css" rel="stylesheet" type="text/css" media="screen" />
-<link rel="alternate" type="application/atom+xml" title="Atom" href="/feed.xml" /> 
+<link rel="stylesheet" href="/css/bootstrap.css">
+<link rel="stylesheet" href="/css/responsive.css">
+<link rel="stylesheet" href="/content/font/elusive-icons/css/elusive-webfont.min.css">
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/style.css">
+<!--[if lte IE 7]><script src="/content/font/elusive-icons/lte-ie7.js"></script><![endif]-->
+<link rel="alternate" type="application/atom+xml" title="Atom" href="/feed.xml"> 
 </head>
