--- a/layouts/_side.html
+++ b/layouts/_side.html
@@ -1,29 +1,18 @@
 <div id="sidebar">
-  <div id="logo">
-    <h1><a href="/">Japan<br />nanoc<br />Users&#039;<br />Group</a></h1>
+  <div class="well">
+    <h2>Home</h2>
+    <p><a href="/">Japan nanoc Users&#039; Group</a></p>
+    <h2>About</h2>
+    <p>このサイトは、各種のお知らせをするため及び情報源へのHUBとして設置しています。</p>
   </div>
-  <ul><li>
-    <p>日本nanocユーザ会（Japan nanoc Users&#039; Group）は、日本のnanocユーザ有志のコミュニティです。日本でのnanocの普及と、nanocの日本語情報拡充を主な目的としています。</p>
-      <h2>About us</h2>
-      <p>このサイトは、各種のお知らせをするため及び情報源へのHUBとして設置しています。</p>
 
-  <ul>
-    <li><a href="https://groups.google.com/d/forum/japan-nanoc-users-group">Japan nanoc Users&#039;Group</a><br />コミュニケーションのためにGoogleグループを利用しています。</li>
-    <li><a href="https://github.com/Japan-nanoc-Users-Group/ja-nanoc-site/wiki">Wiki</a><br />Tips等は現在準備中です。暫定的にGitHubのWikiに使い方などの技術的なコンテンツを作成しています。</li>
-    <li><a href="/feed.xml">Feed</a><br />RSSリーダー等で更新の確認が出来ます。</li>
-    <li><a href="/news_archives/1/">News</a><br />本サイトは、情報源へのHUBとしての役割の他はお知らせの配信がメインのため、過去記事のユーザビリティについては配慮しておりません。</li>
-  </ul>
-  </li></ul>
-
-  <ul>
-    <li>
-      <h2>公式はこちら</h2>
+  <div class="well">
+    <h2>公式はこちら</h2>
       <p>本家のnanoc関連サイトです。</p>
-      <ul>
-        <li><a href="http://nanoc.ws/">nanoc</a><br />公式サイト（英語）です。</li>
-        <li><a href="https://github.com/nanoc/nanoc">nanoc（GitHub）</a><br />nanocのソースを管理しているリポジトリです。</li>
-        <li><a href="https://groups.google.com/forum/?fromgroups#!forum/nanoc">nanoc（Google Group）</a><br />nanocの作者や利用者のコミュニケーションの場です。（英語）</li>
-      </ul>
-    </li>
-  </ul>
+        <ul class="">
+          <li><a href="http://nanoc.ws/">nanoc</a><br />公式サイト（英語）です。</li>
+          <li><a href="https://github.com/nanoc/nanoc">nanoc（GitHub）</a><br />nanocのソースを管理しているリポジトリです。</li>
+          <li><a href="https://groups.google.com/forum/?fromgroups#!forum/nanoc">nanoc（Google Group）</a><br />nanocの作者や利用者のコミュニケーションの場です。（英語）</li>
+        </ul>
+  </div>
 </div>
