--- a/layouts/default.html
+++ b/layouts/default.html
@@ -47,6 +47,15 @@
             <p>コミュニケーション用のGoogleグループです。</p>
           </div></a>
         </li>
+        <li><a href="#">
+          <div class="icon" style="color:#336677;">
+            <i class="icon-graph"></i>
+          </div>
+          <div class="data">
+            <h4>事例紹介（準備中）</h4>
+            <p>nanocを利用された事例紹介を準備しております。</p>
+          </div></a>
+        </li>
       </ul>
     </div>
   </div>
